Revert "fix swaggr"
This reverts commit 2a6d70b9f2d0aec6eb0a49b9118d10711f0a5915.
