# be/cmd/server/docs/swagger.json
@@ -306,11 +306,6 @@
                         "in": "query"
                     },
                     {
-                        "type": "integer",
-                        "name": "companyId",
-                        "in": "query"
-                    },
-                    {
                         "type": "string",
                         "name": "cost",
                         "in": "query"
@@ -652,11 +647,6 @@
                     {
                         "type": "string",
                         "name": "assetName",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "name": "companyId",
                         "in": "query"
                     },
                     {
@@ -1717,11 +1707,6 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "name": "companyId",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
                         "name": "depId",
                         "in": "query"
                     },
@@ -2063,14 +2048,14 @@
                     {
                         "type": "string",
                         "description": "firstName",
-                        "name": "firstName",
+                        "name": "image",
                         "in": "formData",
                         "required": true
                     },
                     {
                         "type": "string",
                         "description": "lastName",
-                        "name": "lastName",
+                        "name": "image",
                         "in": "formData",
                         "required": true
                     },
